--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -64,7 +64,7 @@
     <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
     <script>
     if(location.host.indexOf('.local') > -1){
-        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+        document.write('<script src="https://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     }
     </script>
 </head>
@@ -252,7 +252,12 @@
         </div>
     </scvo-site>
 
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script>
+    {{#if (contains request.url.host '.local')}}
+        <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.js"></script>
+    {{else}}
+        <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.min.js"></script>
+    {{/if}}
+    <!-- <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script> -->
     <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/headroom.min.js"></script>
     <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
