--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1105,7 +1105,7 @@ section.search {
       padding: 0 0 $unit*2;
     }
     .featured-background-image {
-      padding: $unit*2 0;
+      padding: 0;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
