Using our unfortunately unminified older version of mdc js

--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -252,12 +252,14 @@
         </div>
     </scvo-site>
 
+    <!--
     {{#if (contains request.url.host '.local')}}
         <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.js"></script>
     {{else}}
         <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.min.js"></script>
     {{/if}}
-    <!-- <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script> -->
+    -->
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script>
     <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/headroom.min.js"></script>
     <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
