--- a/db/configurations/scvo/templates/pages/page-policy.hbs
+++ b/db/configurations/scvo/templates/pages/page-policy.hbs
@@ -143,11 +143,13 @@
                 {{#compare total ">" 0 ~}}
                 We have {{total}} upcoming event{{#compare total ">" 1}}s{{/compare}}
                 {{else}}
-                We don't have any upcoming events, please check back soon!
+                We don't have any upcoming events
                 {{/compare ~}}
               </section>
               {{#compare total ">" 0 ~}}
-              <section class="mdc-card__actions"><a class="mdc-card__action" href="/policy-research/events">Find out more</a></section>
+              <section class="mdc-card__actions">
+                <a class="mdc-card__action" href="/policy-research/events">Find out more</a>
+              </section>
               {{/compare ~}}
               {{/with ~}}
             </div>
