--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1324,6 +1324,11 @@ section.search {
     line-height: 1.8;
   }
 }
+.post-related .gist img.photo-wee {
+  height: 64px;
+  width: 64px;
+}
+
 .policy-research .latest-content .gist,
 .home .latest-content .gist,
 .digital .latest_content .gist,
