Removed BDS content from top of digital page

--- a/db/configurations/scvo/templates/pages/page-digital.hbs
+++ b/db/configurations/scvo/templates/pages/page-digital.hbs
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div class="basic-digital-skills cta-content callout">
+  <!-- <div class="basic-digital-skills cta-content callout">
     <div class="container-fluid">
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="digital-participation callout">
     <div class="container-fluid">
       <div class="mdc-layout-grid">
