--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1324,7 +1324,7 @@ section.search {
     line-height: 1.8;
   }
 }
-.post-related .gist img.photo-wee {
+.post-related .gist .thumbnail img {
   height: 64px;
   width: 64px;
 }
