css improvement for goodmoves logos on home page

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1324,6 +1324,9 @@ section.search {
     line-height: 1.8;
   }
 }
+.gist.goodmoves-job .thumbnail img {
+  object-fit: contain;
+}
 .post-related .gist .thumbnail img {
   height: 64px;
   width: 64px;
