--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1130,7 +1130,11 @@ section.search {
     .featured-background-image.i-love-charity {
       padding: 0;
     }
+    .featured-background-image.eu-are-valued {
+      background-color: #1E1C34;
+    }
     .featured-background-image.charity-awards {
+      background-color: #150522;
       .mdc-card {
         background-color: rgba(0,0,0,0.5);
         .mdc-card-inner {
