--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <div class="featured-background-image" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
+  <div class="featured-background-image eu-are-valued" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
