--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1335,6 +1335,7 @@ section.search {
 .gist.goodmoves-job .thumbnail img {
   object-fit: contain;
 }
+.page-related .gist .thumbnail img,
 .post-related .gist .thumbnail img {
   height: 64px;
   width: 64px;
