Fix for the fix

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1335,7 +1335,7 @@ section.search {
 .gist.goodmoves-job .thumbnail img {
   object-fit: contain;
 }
-.page-related .gist .thumbnail img,
+.page-related .gist img.photo-wee,
 .post-related .gist .thumbnail img {
   height: 64px;
   width: 64px;
