--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-12-phone">
           <select class="mdc-selectfield" id="distance" name="distance">
-            <option>Any distance from</option>
+            <option value="any">Any distance from</option>
             <option value="1609.344">1 miles from</option>
             <option value="3218.688">2 miles from</option>
             <option value="8046.72" selected>5 miles from</option>
