--- a/assets/fonts/fontawesome/css/fa-solid.css
+++ b/assets/fonts/fontawesome/css/fa-solid.css
@@ -1,6 +1,6 @@
 /*!
- * Font Awesome Pro 5.0.2 by @fontawesome - http://fontawesome.com
- * License - http://fontawesome.com/license (Commercial License)
+ * Font Awesome Pro 5.0.10 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license (Commercial License)
  */
 @font-face {
   font-family: 'Font Awesome 5 Pro';
