--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3371,6 +3371,7 @@ p:last-child {
     top: -0.1rem;
     position: relative;
   }
+  .scvo-staff a::after,
   a.noext::after,
   a[href^="https://scvo.org"]::after,
   a[href^="https://scvo.org.uk"]::after,
