--- a/db/configurations/scvo/partials/menu-charity-awards.hbs
+++ b/db/configurations/scvo/partials/menu-charity-awards.hbs
@@ -10,7 +10,7 @@
       <a href="http://www.scvo.org.uk" target="_blank" class="sponsor" title="Scottish Council for Voluntary Organisations"  style="background-image:url('https://goodhq.org/images/charityawards/logos/scvo-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.cafonline.org" target="_blank" class="sponsor" title="Charities Aid Foundation"  style="background-image:url('https://goodhq.org/images/charityawards/logos/caf-logo-200x200.png');"></a>
+      <a href="http://www.cafonline.org" target="_blank" class="sponsor" title="Charities Aid Foundation"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/caf_logo_new.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       <a href="http://www.keegan-pennykid.com" target="_blank" class="sponsor" title="Keegan & Pennykid"  style="background-image:url('https://goodhq.org/images/charityawards/logos/kandp-logo-200x200.png');"></a>
