Minor styling fixes

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1134,11 +1134,11 @@ section.search {
       background-color: #1E1C34;
     }
     .featured-background-image.charity-awards {
+      height: 200px;
       background-color: #150522;
       display: flex;
       align-items: center;
       overflow: hidden;
-      height: 200px;
       .mdc-card {
         background-color: rgba(0,0,0,0.5);
         .mdc-card-inner {
@@ -2057,7 +2057,7 @@ body.the-gathering:not(.post) {
     }
   }
   .splash-image .splash-overlay .container-fluid {
-    min-height: 30vh;
+    min-height: 20vh;
     .mdc-layout-grid {
       line-height: 0;
       margin: 0;
@@ -3676,8 +3676,11 @@ footer {
         padding-right: 0;
       }
     }
-    .featured-background-image.charity-awards {
+    .featured-content .featured-background-image.charity-awards {
       height: auto;
+    }
+    .cta-content.callout-image {
+      padding: 0 0 $unit;
     }
   }
   .latest-content {
