--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3679,8 +3679,19 @@ footer {
     .featured-content .featured-background-image.charity-awards {
       height: auto;
     }
+    .featured-content .featured-text,
+    .footer-image.join-our-hub,
     .cta-content.callout-image {
       padding: 0 0 $unit;
+    }
+    .scvo-cms-page-20536 .v-margin-full {
+      margin-top: 0;
+    }
+    .cta-grid {
+      .fa-fw {
+        font-size: 2.5rem;
+        padding: 1rem;
+      }
     }
   }
   .latest-content {
