--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1192,6 +1192,7 @@ section.search {
           box-shadow: 1px 2px 5rem rgba(255,255,255,0.15);
         }
         .fa-fw {
+          display: inline-table;
           height: 1.25em;
           line-height: 1.25em;
         }
@@ -3690,7 +3691,7 @@ footer {
     .cta-grid {
       .fa-fw {
         font-size: 2.5rem;
-        padding: 1rem;
+        padding: 1.2rem !important;
       }
     }
   }
