--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -224,7 +224,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h3>
             <a href="/funding">
-              <span class="fal fa-money-bill fa-fw fa-3x" aria-hidden="true"></span>
+              <span class="fal fa-chart-bar fa-fw fa-3x" aria-hidden="true"></span>
               <span class="underline">Funding for my project</span>
             </a>
           </h3>
@@ -240,7 +240,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h3>
             <a href="/jobs">
-              <span class="fal fa-briefcase fa-fw fa-3x" aria-hidden="true"></span>
+              <span class="fal fa-handshake fa-fw fa-3x" aria-hidden="true"></span>
               <span class="underline">Jobs in the sector</span>
             </a>
           </h3>
