Fixed services card image positioning

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2443,9 +2443,9 @@ h1.mdc-typography--title {
     }
   }
 }
-.services .support .mdc-card__primary {
-  height: $unit*4;
-}
+// .services .support .mdc-card__primary {
+//   height: $unit*4;
+// }
 h1.support-sector {
   margin-top: $unit*3;
 }
@@ -2650,41 +2650,55 @@ table.membership-fees {
   .goodmoves .mdc-card__media,
   .goodmoves-brand .mdc-card__media {
     background-color: #58a934 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .goodmoves-brand .mdc-card__media {
     background-size: unset;
   }
   .cjs-brand .mdc-card__media {
     background-color: #f1f1f1 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .funding-scotland .mdc-card__media {
     background-color: #8AC645 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .goodhq .mdc-card__media {
     background-color: #4033E9 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodhq.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .tfn .mdc-card__media {
     background-color: #3b9db1 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/tfn.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .credit-union .mdc-card__media {
     background-color: #1976D2 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/credit-union.png');
+    background-size: 60%;
+    background-position: left center;
+    background-position-x: $unit;
   }
   .milo .mdc-card__media {
     background-color: #4475A0 !important;
-    background-size: contain;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/milo.png');
+    background-size: 30%;
+    background-position: left center;
+    background-position-x: $unit;
   }
 }
 .mdc-card__actions {
