New icons for policy page too

--- a/db/configurations/scvo/templates/pages/page-policy.hbs
+++ b/db/configurations/scvo/templates/pages/page-policy.hbs
@@ -73,7 +73,7 @@
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner v-margin">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <span class="fal fa-fw fa-heart fa-5x"> </span>
+            <span class="fal fa-fw fa-hands-heart fa-5x"> </span>
             <p>
               <strong>1,200,000+ volunteers</strong>
             </p>
@@ -99,26 +99,25 @@
         </div>
         <div class="mdc-layout-grid__inner v-margin">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <span class="fal fa-fw fa-handshake fa-5x"> </span>
+            <span class="fal fa-fw fa-hand-holding-heart fa-5x"> </span>
             <p>
-              <strong>1/4<br />
-                <a href="http://www.volunteerscotland.net/policy-and-research/">More than a quarter of Scottish adults volunteered in 2016</a></strong>
+              <strong><a href="http://www.volunteerscotland.net/policy-and-research/">More than a quarter of Scottish adults volunteered in 2016</a></strong>
               </p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              <span class="fal fa-fw fa-building fa-5x"> </span>
+              <span class="fal fa-fw fa-chart-bar fa-5x"> </span>
               <p>
                 <strong>£11,713,200,000 in assets</strong>
               </p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              <span class="fal fa-fw fa-chart-pie fa-5x"> </span>
+              <span class="fal fa-fw fa-home-heart fa-5x"> </span>
               <p>
                 <strong>74% of charities have no paid staff</strong>
               </p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              <span class="fal fa-fw fa-chart-bar fa-5x"> </span>
+              <span class="fal fa-fw fa-chart-line fa-5x"> </span>
               <p>
                 <strong>854 new charities in 2016</strong>
               </p>
@@ -171,7 +170,7 @@
             <div class="mdc-card">
               <section class="mdc-card__primary">
                 <h1 class="mdc-card__title mdc-card__title--large">
-                  <a href="/policy-research/policy-committee"><span class="fal fa-fw fa-users fa-2x"> </span>Policy Committee</a>
+                  <a href="/policy-research/policy-committee"><span class="fal fa-fw fa-book-heart fa-2x"> </span>Policy Committee</a>
                 </h1>
               </section>
               <section class="mdc-card__supporting-text">
