--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2661,9 +2661,7 @@ table.membership-fees {
   .cjs-brand .mdc-card__media {
     background-color: #f1f1f1 !important;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png');
-    background-size: 60%;
-    background-position: left center;
-    background-position-x: $unit;
+    background-size: contain;
   }
   .funding-scotland .mdc-card__media {
     background-color: #8AC645 !important;
