Events improvements around availability

--- a/db/configurations/scvo/partials/header-splash-event.hbs
+++ b/db/configurations/scvo/partials/header-splash-event.hbs
@@ -29,6 +29,9 @@
               {{#if city ~}}
               {{{city}}}
               {{/if ~}}
+              {{#if places_available ~}}{{else}}
+              <strong>- Fully booked</strong>
+              {{/if ~}}
             </span>
             {{/ifAny ~}}
             {{/unless ~}}
