--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1033,10 +1033,14 @@ section.search {
   .page-content {
     padding: 0;
   }
-  .mdc-card.goodmoves-brand,
   .mdc-card.cjs-brand {
     .mdc-card__media {
       padding: $unit;
+    }
+  }
+  .mdc-card.goodmoves-brand,
+  .mdc-card.cjs-brand {
+    .mdc-card__media {
       a {
         height: 100%;
         width: 100%;
