Loading spinner for iframes

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -868,6 +868,9 @@ a:hover {
 }
 iframe {
   border: none;
+  background-image: url('/assets/images/spinner2.gif');
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 figure {
   margin: $unit 0;
