CU buttons update

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2047,6 +2047,25 @@ form#settled_status {
     max-height: $unit*6;
   }
 }
+.credit-union {
+  .cu-hero {
+    background-image: url('https://members.scvocreditunion.scot/images/scvo-hero.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    .mdc-layout-grid {
+      padding: $unit*1.5;
+      .mdc-button {
+        display: block;
+      }
+    }
+    img {
+      display: none;
+    }
+  }
+}
 body.scottish-charity-awards:not(.post),
 body.the-gathering:not(.post) {
   .container-fluid,
