--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2055,10 +2055,14 @@ form#settled_status {
     background-position: center center;
     display: flex;
     align-items: center;
+    padding: $unit*1.5 0;
     .mdc-layout-grid {
-      padding: $unit*1.5;
+      padding: 0 $unit*1.5;
+      width: 100%;
       .mdc-button {
-        display: block;
+        display: inline-grid;
+        height: auto;
+        width: 100%;
       }
     }
     img {
