--- a/db/configurations/scvo/templates/grants/grant-charter-search.hbs
+++ b/db/configurations/scvo/templates/grants/grant-charter-search.hbs
@@ -67,11 +67,20 @@
 
           <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
+              {{#compare data.primaryResponse.hits.total ">" 0 ~}}
               {{#each data.primaryResponse.hits.hits ~}}
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 {{{_source.rendered.scvo_card}}}
               </div>
               {{/each ~}}
+              {{else}}
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                <p>
+                  No projects could be found, please try a different search.
+                </p>
+                <p>&nbsp;</p>
+              </div>
+              {{/compare ~}}
             </div>
           </div>
 
