Improved digital blogs list

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -705,12 +705,6 @@ primary-dark: #251032
 .services.funding-scotland {
   @include theme-colours('funding-scotland');
 }
-.credit-union {
-  @include theme-colours('credit-union');
-}
-.digital {
-  @include theme-colours('digital');
-}
 .events.a1vb0000007fc04aaa-the-gathering,
 .the-gathering {
   @include theme-colours('gathering');
@@ -726,6 +720,12 @@ primary-dark: #251032
 .press-media,
 .policy-research {
   @include theme-colours('posts');
+}
+.credit-union {
+  @include theme-colours('credit-union');
+}
+.digital {
+  @include theme-colours('digital');
 }
 .tfn,
 .post-related-tfn,
@@ -1966,8 +1966,8 @@ form#settled_status {
     letter-spacing: -0.06rem;
     margin-bottom: $unit/2;
     .photo-wee {
-      height: 64px;
-      width: 64px;
+      height: 84px;
+      width: 84px;
       vertical-align: bottom;
       margin: -$unit/5 0 0 0;
       float: left;
@@ -3634,6 +3634,7 @@ footer {
       }
     }
   }
+  .splash-image h1.header-text .photo-wee,
   .gist .thumbnail img,
   .gist img.photo-wee {
     height: 64px;
