Minor styling fix

--- a/db/configurations/scvo/partials/wee-search.hbs
+++ b/db/configurations/scvo/partials/wee-search.hbs
@@ -1,16 +1,14 @@
-<div class="mdc-card mdc-card-search search">
-  <section class="mdc-card__primary">
-    <h2 class="mdc-card__title mdc-card__title--large">{{title}}</h2>
-    <form action="{{searchPath}}" method="GET" [searchroute]="'{{searchRoute}}'" class="search_form" autocomplete="off">
-      <div class="mdc-textfield mdc-textfield--upgraded">
-        <input type="text" class="mdc-textfield__input" name="q" id="wee-query" value="{{request.params.query.q}}">
-        <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
-          <span class="far fa-2x fa-search" aria-hidden="true"></span>
-        </button>
-      </div>
-      {{#each (keyValue (parse extraParams)) ~}}
-      <input type="hidden" name="{{key}}" value="{{value}}">
-      {{/each ~}}
-    </form>
-  </section>
+<div class="projects search">
+  <h2 class="mdc-card__title mdc-card__title--large">{{title}}</h2>
+  <form action="{{searchPath}}" method="GET" [searchroute]="'{{searchRoute}}'" class="search_form" autocomplete="off">
+    <div class="mdc-textfield mdc-textfield--upgraded">
+      <input type="text" class="mdc-textfield__input" name="q" id="wee-query" value="{{request.params.query.q}}">
+      <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+        <span class="far fa-2x fa-search" aria-hidden="true"></span>
+      </button>
+    </div>
+    {{#each (keyValue (parse extraParams)) ~}}
+    <input type="hidden" name="{{key}}" value="{{value}}">
+    {{/each ~}}
+  </form>
 </div>
