--- a/db/configurations/scvo/templates/documents/evidence-library-document-search.hbs
+++ b/db/configurations/scvo/templates/documents/evidence-library-document-search.hbs
@@ -1,22 +1,5 @@
 <div class="library library-search">
-  <div class="splash-image splash-image-{{data.primaryResponse.hits.hits.[0]._type}}-search" style="{{> header_splash_image}}">
-    <div class="splash-overlay{{#if data.primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
-      <div class="container-fluid">
-        <div class="mdc-layout-grid">
-          {{#if data.primaryResponse.hits.hits.[0]._source.header_text ~}}
-          <img src="{{data.primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{data.primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-          {{else}}
-          <h1 class="header-text">
-            <span class="header-text-banner">
-              Evidence Library
-            </span>
-          </h1>
-          {{/if ~}}
-        </div>
-        {{> header_caption}}
-      </div>
-    </div>
-  </div>
+  {{> header_splash headerTextOverride="Evidence Library"}}
   <div class="container-fluid">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
@@ -25,9 +8,6 @@
     </ul>
     <div class="mdc-layout-grid v-margin-full">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar library-sidebar">
-          {{> sidebar_library_search}}
-        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content library-content">
           {{> search_info paging=data.primaryResponse.pagination}}
 
@@ -36,6 +16,9 @@
           {{/each ~}}
 
           {{> pagination paging=data.primaryResponse.pagination}}
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar library-sidebar">
+          {{> sidebar_library_search}}
         </div>
       </div>
     </div>
